--- a/jenkinsfile
+++ b/jenkinsfile
@@ -5,6 +5,7 @@ pipeline{
             steps{
                 script {
                     sh('npm install')
+                    sh('npm install -g mocha')
                 }
             }
         }
