--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha ./tests/*.spec.js",
-    "start": "nodemon app.js"
+    "start": "nodemon app.js",
+    "build-dev": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
