--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "mocha ./tests/*.spec.js",
     "start": "nodemon app.js",
-    "build-dev": "nodemon app.js"
+    "build-dev": "./node_modules/.bin/nodemon app.js"
   },
   "keywords": [],
   "author": "",
