--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
+    "build": "npm nodemon app.js",
     "test": "mocha ./tests/*.spec.js",
     "start": "nodemon app.js"
   },
