--- a/jenkinsfile
+++ b/jenkinsfile
@@ -20,7 +20,8 @@ pipeline{
                 script { 
                     def scannerHome = tool 'scanner'
                         withSonarQubeEnv {
-                            sh "${scannerHome}/bin/sonar-scanner"
+                            sh "${scannerHome}/bin/sonar-scanner \
+                                -Dsonar.projectKey=twinerzBackend"
                         }
                     } 
                 } 
