--- a/jenkinsfile
+++ b/jenkinsfile
@@ -18,7 +18,7 @@ pipeline{
         stage('SonarQube Analysis') {
             steps{
                 script { 
-                    def scannerHome = tool 'Scanner'
+                    def scannerHome = tool 'scanner'
                         withSonarQubeEnv {
                             sh "${scannerHome}/bin/sonar-scanner \
                                 -Dsonar.projectKey=twinerzBackend"
