--- a/jenkinsfile
+++ b/jenkinsfile
@@ -15,6 +15,17 @@ pipeline{
                 }
             }
         }
+        stage('SonarQube Analysis') {
+            steps{
+                script { 
+                    def scannerHome = tool 'scanner'
+                        withSonarQubeEnv {
+                            sh "${scannerHome}/bin/sonar-scanner \
+                                -Dsonar.projectKey=twinerzBackend"
+                        }
+                    } 
+                } 
+            }
         stage('Build application') {
             steps{
                 script {
