--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build-dev": "nodemon app.js",
+    "build-dev": "webpack --config webpack.config.js ",
     "test": "mocha ./tests/*.spec.js",
-    "start": "nodemon app.js",
-    "build-dev": "nodemon app.js"
+    "start": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +14,8 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "browserify-zlib": "^0.2.0",
+    "buffer": "^6.0.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.3",
@@ -25,11 +26,18 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.9",
     "nodemon": "^3.0.3",
+    "path-browserify": "^1.0.1",
     "peer": "^1.0.2",
+    "process": "^0.11.10",
     "qrcode": "^1.5.3",
-    "speakeasy": "^2.0.0"
+    "speakeasy": "^2.0.0",
+    "stream-browserify": "^3.0.0",
+    "url": "^0.11.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.24.0",
+    "@babel/preset-env": "^7.24.0",
+    "babel-loader": "^9.1.3",
     "chai": "^5.1.0",
     "mocha": "^10.3.0",
     "webpack": "^5.90.3",
