--- a/jenkinsfile
+++ b/jenkinsfile
@@ -15,13 +15,18 @@ pipeline{
                 }
             }
         }
-          stage("MVN SONARQUBE"){
-                    steps{
-                        withSonarQubeEnv(installationName: 'scanner') {
-                        sh "mvn sonar:sonar"
-                        }
-                    }
-                } 
+           stage('SonarQube Analysis') {
+            steps{
+                script { 
+                def scannerHome = tool 'scanner'
+            sh "${scannerHome}/bin/sonar-scanner \
+                -Dsonar.projectKey=twinerzBackend \
+                -Dsonar.sources=. \
+                -Dsonar.host.url=http://172.16.5.155:9000/ \
+                -Dsonar.login=b1a89361febd6ba0fd1345b93efe579d3e0e9b4d"
+        } 
+    } 
+}
 
         stage('Build application') {
             steps{
