--- a/package.json
+++ b/package.json
@@ -39,6 +39,11 @@
     "@babel/preset-env": "^7.24.0",
     "babel-loader": "^9.1.3",
     "chai": "^5.1.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-react": "^7.34.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "mocha": "^10.3.0",
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4"
