--- a/jenkinsfile
+++ b/jenkinsfile
@@ -31,7 +31,7 @@ pipeline{
         stage('Building images (node and mongo)') {
             steps{
                 script {
-                    sh('docker compose build')
+                    sh('sudo docker compose build')
                 }
             }
         }
