--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,5 +1,10 @@
 pipeline{
     agent any
+
+    environment {
+        registryCredentials = "nexus"
+        registry = "172.16.5.241s:8083"
+    }
     stages {
         stage('Install dependencies') {
             steps{
@@ -34,5 +39,16 @@ pipeline{
                 }
             }
         }
+        stage('Deploy to Nexus') {
+            steps{ 
+                script {
+                    docker.withRegistry("http://"+registry,
+                    registryCredentials ) {
+                        sh('docker push $registry/nodemongoapp:5.0 ')
+                        }
+                    }
+                }
+            }
+
     }
 }
