--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,7 +3,7 @@ pipeline{
 
     environment {
         registryCredentials = "nexus"
-        registry = "172.16.5.241s:8083"
+        registry = "172.16.5.241:8083"
     }
     stages {
         stage('Install dependencies') {
