--- a/jenkinsfile
+++ b/jenkinsfile
@@ -40,19 +40,18 @@ pipeline{
             }
         }
         stage('Deploy to Nexus') {
-            steps{ 
-                script {
-                       withCredentials([
-                usernamePassword(credentialsId: 'nexus', passwordVariable: 'esprit', usernameVariable: 'admin')
-            ])
-                    docker.withRegistry("http://"+registry,
-                    , 'docker-credentials' ) {
-                        sh("docker login -u admin -p esprit 172.16.5.241:8081")
-                        sh('docker push $registry/nodemongoapp:5.0 ')
+            steps {
+                withCredentials([
+                    usernamePassword(credentialsId: 'nexus', passwordVariable: 'NEXUS_PASSWORD', usernameVariable: 'NEXUS_USERNAME')
+                ]) {
+                    script {
+                        docker.withRegistry('http://' + registry, 'docker-credentials') {
+                            sh "docker login -u ${NEXUS_USERNAME} -p ${NEXUS_PASSWORD} ${registry}"
+                            sh "docker push ${registry}/nodemongoapp:5.0"
                         }
                     }
                 }
             }
-
+        }
     }
 }
