--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,57 +1,47 @@
-pipeline{
+pipeline {
     agent any
 
     environment {
         registryCredentials = "nexus"
         registry = "172.16.5.241:8081"
     }
+
     stages {
         stage('Install dependencies') {
-            steps{
-                script {
-                    sh('npm install')
-                }
+            steps {
+                sh 'npm install'
             }
         }
+
         stage('Unit Test') {
-            steps{
-                script {
-                    sh('npm test')
+            steps {
+                sh 'npm test'
+            }
+        }
+
+        stage('SonarQube Analysis') {
+            steps {
+                withSonarQubeEnv('SonarQube') {
+                    sh 'sonar-scanner -Dsonar.projectKey=twinerzBackend'
                 }
             }
         }
-       stage('SonarQube Analysis') {
-            steps{
-                script { 
-                    def scannerHome = tool 'scanner'
-                        withSonarQubeEnv {
-                            sh "${scannerHome}/bin/sonar-scanner \
-                                -Dsonar.projectKey=twinerzBackend"
-                        }
-                    } 
-                } 
-            }   
 
         stage('Building images (node and mongo)') {
-            steps{
-                script {
-                    sh(' docker compose build')
-                }
+            steps {
+                sh 'docker compose build'
             }
         }
-        stage('Deploy to Nexus') {
-            steps {
-                withCredentials([
-                    usernamePassword(credentialsId: 'nexus', passwordVariable: 'NEXUS_PASSWORD', usernameVariable: 'NEXUS_USERNAME')
-                ]) {
-                    script {
-                        docker.withRegistry('http://' + registry, 'docker-credentials') {
-                            sh "docker login -u ${NEXUS_USERNAME} -p ${NEXUS_PASSWORD} ${registry}"
-                            sh "docker push ${registry}/nodemongoapp:5.0"
-                        }
+
+       stage('Deploy to Nexus') {
+            steps{ 
+                script {
+                    docker.withRegistry("http://"+registry,
+                    registryCredentials ) {
+                    sh('docker push $registry/nodemongoapp:5.0 ')
                     }
-                }
             }
+
         }
     }
 }
