--- a/jenkinsfile
+++ b/jenkinsfile
@@ -7,7 +7,7 @@ pipeline {
     }
 
     stages {
-        stage('Install dependencies') {
+        stage('Install dependenciess') {
             steps {
                 sh 'npm install'
             }
