--- a/jenkinsfile
+++ b/jenkinsfile
@@ -21,7 +21,7 @@ pipeline {
 
         stage('SonarQube Analysis') {
             steps {
-                withSonarQubeEnv('SonarQube') {
+                withSonarQubeEnv('scanner') {
                     sh 'sonar-scanner -Dsonar.projectKey=twinerzBackend'
                 }
             }
