--- a/jenkinsfile
+++ b/jenkinsfile
@@ -35,12 +35,13 @@ pipeline {
                 sh 'docker compose build'
             }
         }
-        stage('Deploy to Nexus') {
+       stage('Deploy to Nexus') {
             steps{ 
                 script {
-                    docker.withRegistry("http://${register}/", registryCredentials ) {
-                    sh('docker push $registry/nodemongoapp:5.0 ')
-                    }
+                    docker.withRegistry("http://"+registry,
+                        registryCredentials ) {
+                        sh('docker push $registry/nodemongoapp:5.0 ')
+                        }
                 }
             }
         }
