--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,12 +2,12 @@ pipeline {
     agent any
 
     environment {
-        registryCredentials = "nexus"
-        registry = "172.16.5.241:8083"
+        registryCredentials = 'nexus'
+        registry = '172.16.5.241:8083'
     }
 
     stages {
-        stage('Install dependenciess') {
+        stage('Install dependencies') {
             steps {
                 sh 'npm install'
             }
@@ -19,23 +19,20 @@ pipeline {
             }
         }
 
-
-
         stage('Building images (node and mongo)') {
             steps {
-                sh 'docker compose build'
+                sh 'docker-compose build'
             }
         }
-       stage('Deploy to Nexus') {
-            steps{ 
+
+        stage('Deploy to Nexus') {
+            steps {
                 script {
-                    docker.withRegistry("http://"+registry,
-                        registryCredentials ) {
-                        sh('docker push $registry/nodemongoapp:5.0 ')
-                        }
+                    docker.withRegistry("http://${registry}", registryCredentials) {
+                        sh 'docker push ${registry}/nodemongoapp:5.0'
+                    }
                 }
             }
         }
-
     }
 }
