--- a/jenkinsfile
+++ b/jenkinsfile
@@ -28,7 +28,7 @@ pipeline {
         stage('Deploy to Nexus') {
             steps {
                 script {
-                    docker.withRegistry("http://$registry", 'docker') {
+                    docker.withRegistry("http://$registry", 'nexus') {
                         sh 'docker login -u admin -p esprit'
                         sh 'docker push ${registry}/nodemongoapp:5.0'
                     }
