--- a/jenkinsfile
+++ b/jenkinsfile
@@ -25,15 +25,16 @@ pipeline {
             }
         }
 
-        stage('Deploy to Nexus') {
-            steps {
-                script {
-                    docker.withRegistry("http://$registry", 'nexus') {
-                       
-                        sh 'docker push ${registry}/nodemongoapp:5.0'
-                    }
-                }
-            }
-        }
+      stage('Deploy to Nexus') {
+steps{ 
+script {
+docker.withRegistry("http://"+registry,
+registryCredentials ) {
+sh('docker push $registry/nodemongoapp:5.0 ')
+}
+}
+}
+}
+
     }
 }
