--- a/jenkinsfile
+++ b/jenkinsfile
@@ -25,16 +25,17 @@ pipeline {
             }
         }
 
-      stage('Deploy to Nexus') {
-steps{ 
-script {
-docker.withRegistry("http://"+registry,
-registryCredentials ) {
-sh('docker push $registry/nodemongoapp:5.0 ')
-}
-}
-}
-}
-
+        stage('Deploy to Nexus') {
+            steps {
+                script {
+                    withCredentials([
+                        usernamePassword(credentialsId: registryCredentials, passwordVariable: 'REGISTRY_PASSWORD', usernameVariable: 'REGISTRY_USERNAME')
+                    ]) {
+                        sh "echo $REGISTRY_PASSWORD | docker login -u $REGISTRY_USERNAME --password-stdin $registry"
+                        sh "docker push $registry/nodemongoapp:5.0"
+                    }
+                }
+            }
+        }
     }
 }
