--- a/jenkinsfile
+++ b/jenkinsfile
@@ -32,7 +32,8 @@ pipeline {
                         usernamePassword(credentialsId:registryCredentials, passwordVariable: 'REGISTRY_PASSWORD', usernameVariable: 'REGISTRY_USERNAME')
                     ]) {
                         sh '''
-                            docker login -u $REGISTRY_USERNAME --password-stdin $registry <<< "esprit"
+                            echo $REGISTRY_USERNAME
+                            docker login -u $REGISTRY_USERNAME --password-stdin $registry <<< "$REGISTRY_PASSWORD"
                             docker push $registry/nodemongoapp:5.0
                         '''
                     }
