--- a/jenkinsfile
+++ b/jenkinsfile
@@ -15,13 +15,7 @@ pipeline{
                 }
             }
         }
-        stage('Jacoco Reorts')
-        {
-            steps{
-                jacoco()
-                echo "Publishing jacoco code coverage reports"
-            }
-        }
+       
        stage('SonarQube Analysis') {
             steps{
                 script { 
@@ -34,7 +28,15 @@ pipeline{
         } 
     } 
 }
-
+jacocoTestReport {
+    reports {
+        xml.required = true
+    }
+}
+test.finalizedBy jacocoTestReport
+tasks.named('sonarqube').configure {
+    dependsOn test
+}
         stage('Build application') {
             steps{
                 script {
