--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,4 +1,4 @@
-pipeline {
+pipeline{
     agent any
     stages {
         stage('Install dependencies') {
@@ -15,31 +15,25 @@ pipeline {
                 }
             }
         }
-        stage('SonarQube Analysis') {
+       stage('SonarQube Analysis') {
             steps{
                 script { 
-                    def scannerHome = tool 'scanner'
-                    sh "${scannerHome}/bin/sonar-scanner \
-                        -Dsonar.projectKey=twinerzBackend \
-                        -Dsonar.sources=. \
-                        -Dsonar.host.url=http://192.168.50.14:9000 \
-                        -Dsonar.login=3bcc2e54047dd2e2c89ca544cab2d31d6456c296"
-                } 
-            }
-        }
-      
-    }
-    post {
-        always {
-            jacocoTestReport {
-                reports {
-                    xml.required = true
+                 def scannerHome = tool 'scanner'
+            sh "${scannerHome}/bin/sonar-scanner \
+                -Dsonar.projectKey=twinerzBackend \
+                -Dsonar.sources=. \
+                -Dsonar.host.url=http://192.168.50.14:9000 \
+                -Dsonar.login=3bcc2e54047dd2e2c89ca544cab2d31d6456c296"
+        } 
+    } 
+}
+
+        stage('Build application') {
+            steps{
+                script {
+                    sh('npm run build-dev  ')
                 }
             }
         }
     }
-}
-
-tasks.named('sonarqube').configure {
-    dependsOn test
 }
