--- a/jenkinsfile
+++ b/jenkinsfile
@@ -21,19 +21,20 @@ pipeline {
                 echo "Publishing Jacoco code coverage reports"
             }
         }
-        stage('SonarQube Analysis') {
-            steps {
-                script { 
-                    def scannerHome = tool 'scanner'
-                    sh "${scannerHome}/bin/sonar-scanner \
-                        -Dsonar.projectKey=twinerzBackend \
-                        -Dsonar.sources=. \
-                        -Dsonar.host.url=http://192.168.50.14:9000 \
-                        -Dsonar.login=3bcc2e54047dd2e2c89ca544cab2d31d6456c296 \
-                        -Dsonar.jacoco.reportPaths=**/build/reports/jacoco/test/*.xml"
-                } 
-            } 
-        }
+     stage('SonarQube Analysis') {
+    steps {
+        script { 
+            def scannerHome = tool 'scanner'
+            sh "${scannerHome}/bin/sonar-scanner \
+                -Dsonar.projectKey=twinerzBackend \
+                -Dsonar.sources=. \
+                -Dsonar.host.url=http://192.168.50.14:9000 \
+                -Dsonar.login=3bcc2e54047dd2e2c89ca544cab2d31d6456c296 \
+                -Dsonar.javascript.lcov.reportPaths=coverage/lcov.info"
+        } 
+    } 
+}
+
         stage('Build application') {
             steps {
                 script {
