--- a/package.json
+++ b/package.json
@@ -5,9 +5,14 @@
   "main": "index.js",
   "scripts": {
     "build-dev": "webpack --config webpack.config.js ",
-    "test": "mocha ./tests/*.spec.js",
+    "test": "nyc mocha ./tests/*.spec.js",
     "start": "nodemon app.js"
   },
+  "nyc": {
+    "reporter": ["lcov", "text-summary"],
+    "exclude": ["tests/**/*.js"]
+  },
+  
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -40,6 +45,7 @@
     "babel-loader": "^9.1.3",
     "chai": "^5.1.0",
     "mocha": "^10.3.0",
+    "nyc": "^15.1.0",
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4"
   }
