--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "babel-loader": "^9.1.3",
     "chai": "^5.1.0",
     "mocha": "^10.3.0",
+    "sinon": "^17.0.1",
     "webpack": "^5.90.3",
     "webpack-cli": "^5.1.4"
   }
