--- a/jenkinsfile
+++ b/jenkinsfile
@@ -28,14 +28,10 @@ pipeline{
     } 
 }
 
-      stage('Build application') {
-            steps {
+        stage('Build application') {
+            steps{
                 script {
-                    // Change to project directory
-                    dir('C:\Users\fedi0\OneDrive\Bureau\PI DEV TWINERZ\TWINERZ-ConnectCareerBackend') {
-                        // Execute npm build command
-                        sh 'npm run build-dev'
-                    }
+                    sh('npm run build-dev  ')
                 }
             }
         }
