--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "browserify-zlib": "^0.2.0",
     "buffer": "^6.0.3",
     "cors": "^2.8.5",
+    "crypto-browserify": "^3.12.0",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.3",
     "express-socket.io": "^1.0.3",
