--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build-dev": "webpack --config webpack.config.js",
-    "test": "mocha ./tests/*.spec.js",
+    "test": "nyc --reporter=lcov mocha ./tests/*.spec.js",
     "start": "nodemon app.js"
   },
   "nyc": {
