--- a/jenkinsfile
+++ b/jenkinsfile
@@ -24,19 +24,18 @@ pipeline {
                 sh 'docker compose build'
             }
         }
-        stage('Deploy to Nexus') {
-            steps {
+
+        stage('Run application ') {
+            steps{ 
                 script {
-                    withCredentials([
-                        usernamePassword(credentialsId: registryCredentials, passwordVariable: 'REGISTRY_PASSWORD', usernameVariable: 'REGISTRY_USERNAME')
-                    ]) {
-                        sh '''
-                            echo "$REGISTRY_PASSWORD" | docker login -u "$REGISTRY_USERNAME" --password-stdin $registry
-                            docker push $registry/nodemongoapp:5.0
-                        '''
+                    docker.withRegistry("http://"+registry, registryCredentials 
+                        ) {
+                        sh('docker pull $registry/nodemongoapp:5.0 ')
+                        sh('docker-compose up -d ')
+                        }
                     }
                 }
             }
-        }
+
     }
 }
