--- a/jenkinsfile
+++ b/jenkinsfile
@@ -19,7 +19,25 @@ pipeline {
             }
         }
 
-
+        stage('Building images (node and mongo)') {
+            steps {
+                sh 'docker compose build'
+            }
+        }
+        stage('Deploy to Nexus') {
+            steps {
+                script {
+                    withCredentials([
+                        usernamePassword(credentialsId: registryCredentials, passwordVariable: 'REGISTRY_PASSWORD', usernameVariable: 'REGISTRY_USERNAME')
+                    ]) {
+                        sh '''
+                            echo "$REGISTRY_PASSWORD" | docker login -u "$REGISTRY_USERNAME" --password-stdin $registry
+                            docker push $registry/nodemongoapp:5.0
+                        '''
+                    }
+                }
+            }
+        }
         stage('Run application ') {
             steps{ 
                 script {
