--- a/jenkinsfile
+++ b/jenkinsfile
@@ -35,5 +35,12 @@ pipeline{
                 }
             }
         }
+        stage('Building images (node and mongo)') {
+            steps{
+                script {
+                    sh('docker-compose build')
+                }
+            }
+        }
     }
 }
