--- a/jenkinsfile
+++ b/jenkinsfile
@@ -38,7 +38,7 @@ pipeline{
         stage('Building images (node and mongo)') {
             steps{
                 script {
-                    sh('docker-compose build')
+                    sh('docker compose build')
                 }
             }
         }
