--- a/jenkinsfile
+++ b/jenkinsfile
@@ -28,13 +28,13 @@ pipeline{
     } 
 }
 
-        stage('Build application') {
-            steps{
-                script {
-                    sh('npm run build-dev  ')
-                }
-            }
-        }
+        // stage('Build application') {
+        //     steps{
+        //         script {
+        //             sh('npm run build-dev  ')
+        //         }
+        //     }
+        // }
         stage('Building images (node and mongo)') {
             steps{
                 script {
