--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,5 +1,10 @@
 pipeline{
     agent any
+    environment {
+        registryCredentials = "nexus"
+        registry = "172.16.5.155:8083"
+    }
+
     stages {
         stage('Install dependencies') {
             steps{
@@ -41,6 +46,15 @@ pipeline{
                     sh('docker compose build')
                 }
             }
+        }
+        stage('Deploy to Nexus') {
+            steps{
+                script {
+                 docker.withRegistry("http://"+registry,registryCredentials ) {
+                    sh('docker push $registry/nodemongoapp:5.0 ')
+                             }
+                        }
+                }
         }
     }
 }
