--- a/jenkinsfile
+++ b/jenkinsfile
@@ -40,18 +40,18 @@ pipeline{
         //         }
         //     }
         // }
-        stage('Building images (node and mongo)') {
-            steps{
-                script {
-                    sh('docker compose build')
-                }
-            }
-        }
+        // stage('Building images (node and mongo)') {
+        //     steps{
+        //         script {
+        //             sh('docker compose build')
+        //         }
+        //     }
+        // }
         stage('Deploy to Nexus') {
             steps{
                 script {
                  docker.withRegistry("http://"+registry,registryCredentials ) {
-                    sh('docker push $registry/nodemongoapp:5.0 ')
+                    sh('docker push $registry/nodemongoapp:6.0 ')
                              }
                         }
                 }
