--- a/jenkinsfile
+++ b/jenkinsfile
@@ -20,18 +20,18 @@ pipeline{
                 }
             }
         }
-           stage('SonarQube Analysis') {
-            steps{
-                script { 
-                def scannerHome = tool 'scanner'
-            sh "${scannerHome}/bin/sonar-scanner \
-                -Dsonar.projectKey=twinerzBackend \
-                -Dsonar.sources=. \
-                -Dsonar.host.url=http://172.16.5.155:9000/ \
-                -Dsonar.login=b1a89361febd6ba0fd1345b93efe579d3e0e9b4d"
-        } 
-    } 
-}
+//            stage('SonarQube Analysis') {
+//             steps{
+//                 script { 
+//                 def scannerHome = tool 'scanner'
+//             sh "${scannerHome}/bin/sonar-scanner \
+//                 -Dsonar.projectKey=twinerzBackend \
+//                 -Dsonar.sources=. \
+//                 -Dsonar.host.url=http://172.16.5.155:9000/ \
+//                 -Dsonar.login=b1a89361febd6ba0fd1345b93efe579d3e0e9b4d"
+//         } 
+//     } 
+// }
 
         // stage('Build application') {
         //     steps{
@@ -56,5 +56,15 @@ pipeline{
                         }
                 }
         }
+        stage('Run application ') {
+            steps{
+                script {
+                    docker.withRegistry("http://"+registry, registryCredentials) {
+                     sh('docker pull $registry/nodemongoapp:6.0 ')
+                     sh('docker compose up -d ')
+                           }
+                        }
+                }
+            }
     }
 }
