--- a/jenkinsfile
+++ b/jenkinsfile
@@ -40,31 +40,31 @@ pipeline{
                 }
             }
         }
-        stage('Building images (node and mongo)') {
-            steps{
-                script {
-                    sh('docker compose build')
-                }
-            }
-        }
-        stage('Deploy to Nexus') {
-            steps{
-                script {
-                 docker.withRegistry("http://"+registry,registryCredentials ) {
-                    sh('docker push $registry/nodemongoapp:6.0 ')
-                             }
-                        }
-                }
-        }
-        stage('Run application ') {
-            steps{
-                script {
-                    docker.withRegistry("http://"+registry, registryCredentials) {
-                     sh('docker pull $registry/nodemongoapp:6.0 ')
-                     sh('docker compose up -d ')
-                           }
-                        }
-                }
-            }
+        // stage('Building images (node and mongo)') {
+        //     steps{
+        //         script {
+        //             sh('docker compose build')
+        //         }
+        //     }
+        // }
+        // stage('Deploy to Nexus') {
+        //     steps{
+        //         script {
+        //          docker.withRegistry("http://"+registry,registryCredentials ) {
+        //             sh('docker push $registry/nodemongoapp:6.0 ')
+        //                      }
+        //                 }
+        //         }
+        // }
+        // stage('Run application ') {
+        //     steps{
+        //         script {
+        //             docker.withRegistry("http://"+registry, registryCredentials) {
+        //              sh('docker pull $registry/nodemongoapp:6.0 ')
+        //              sh('docker compose up -d ')
+        //                    }
+        //                 }
+        //         }
+        //     }
     }
 }
