--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
 version: '3.8'
+
 services:
   db:
     image: mongo:4.2
@@ -11,6 +12,7 @@ services:
       - 27017:27017
     volumes:
       - ./data/dump:/dump
+
   app:
     build: .
     image: 172.16.5.155:8083/nodemongoapp:6.0
@@ -20,5 +22,23 @@ services:
       - '5000:5000'
     depends_on:
       - db
+
+  prometheus:
+    image: prom/prometheus
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+
+  grafana:
+    image: grafana/grafana
+    ports:
+      - "3000:3000"
+    environment:
+      - GF_SECURITY_ADMIN_PASSWORD=esprit
+    volumes:
+      - grafana_data:/var/lib/grafana
+
 volumes:
   mongo-data:
+  grafana_data:
