--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-   
     "test": "mocha ./tests/*.spec.js",
     "start": "nodemon app.js"
   },
@@ -20,6 +19,7 @@
     "buffer": "^6.0.3",
     "constants-browserify": "^1.0.0",
     "cors": "^2.8.5",
+    "cron": "^3.1.6",
     "crypto-browserify": "^3.12.0",
     "esbuild": "^0.20.1",
     "express": "^4.18.2",
@@ -30,6 +30,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.9",
     "nodemon": "^3.0.3",
     "os-browserify": "^0.3.0",
