--- a/jenkinsfile
+++ b/jenkinsfile
@@ -37,20 +37,20 @@ pipeline {
                 }
             }
         }
-        stage('Build application') {
-            steps{
-                script {
-                    withCredentials([
-                        usernamePassword(credentialsId: registryCredentials, passwordVariable: 'REGISTRY_PASSWORD', usernameVariable: 'REGISTRY_USERNAME')
-                    ]) {
-                        sh '''
-                            echo "$REGISTRY_PASSWORD" | docker login -u "$REGISTRY_USERNAME" --password-stdin $registry
-                            docker push $registry/nodemongoapp:5.0
-                        '''
-                    }
-                }
-            }
-        }
+        // stage('Build application') {
+        //     steps{
+        //         script {
+        //             withCredentials([
+        //                 usernamePassword(credentialsId: registryCredentials, passwordVariable: 'REGISTRY_PASSWORD', usernameVariable: 'REGISTRY_USERNAME')
+        //             ]) {
+        //                 sh '''
+        //                     echo "$REGISTRY_PASSWORD" | docker login -u "$REGISTRY_USERNAME" --password-stdin $registry
+        //                     docker push $registry/nodemongoapp:5.0
+        //                 '''
+        //             }
+        //         }
+        //     }
+        // }
         stage('Deploy to Nexus') {
             steps{
                 script {
