--- a/jenkinsfile
+++ b/jenkinsfile
@@ -32,22 +32,19 @@ pipeline {
         }
        
         stage('Build application') {
-    steps {
-        script {
-            withCredentials([
-                usernamePassword(credentialsId: registryCredentials, passwordVariable: 'REGISTRY_PASSWORD', usernameVariable: 'REGISTRY_USERNAME')
-            ]) {
-                // Log in to the Docker registry
-                sh "echo $REGISTRY_PASSWORD | docker login -u $REGISTRY_USERNAME --password-stdin $registry"
-
-                // Tag the local image with the registry address and push it
-                sh "docker tag nodemongoapp:5.0 $registry/nodemongoapp:5.0"
-                sh "docker push $registry/nodemongoapp:5.0"
+            steps{
+                script {
+                    withCredentials([
+                        usernamePassword(credentialsId: registryCredentials, passwordVariable: 'REGISTRY_PASSWORD', usernameVariable: 'REGISTRY_USERNAME')
+                    ]) {
+                        sh '''
+                            echo "$REGISTRY_PASSWORD" | docker login -u "$REGISTRY_USERNAME" --password-stdin $registry
+                            docker push $registry/nodemongoapp:5.0
+                        '''
+                    }
+                }
             }
         }
-    }
-}
-
         stage('Deploy to Nexus') {
             steps{
                 script {
