--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@octoai/client": "^0.5.2",
     "@swc/core": "^1.4.6",
     "@swc/wasm": "^1.4.6",
+    "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "browserify-zlib": "^0.2.0",
@@ -31,6 +33,7 @@
     "cors": "^2.8.5",
     "cron": "^3.1.6",
     "crypto-browserify": "^3.12.0",
+    "dotenv": "^16.4.5",
     "esbuild": "^0.20.1",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.3",
@@ -45,8 +48,10 @@
     "nodemon": "^3.0.3",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
+    "pdf-parse": "^1.1.1",
     "peer": "^1.0.2",
     "process": "^0.11.10",
+    "prompts": "^2.4.2",
     "qrcode": "^1.5.3",
     "querystring-es3": "^0.2.1",
     "speakeasy": "^2.0.0",
